# enso-forecast

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: data_sources.yaml  export.yaml  features.yaml  modeling.yaml
notebooks/exploratory/: 00_raw_data_inspection.ipynb
notebooks/research/: 01_dataset_eda.ipynb  02_model_benchmarking.ipynb  enso_2026_forecast.ipynb  enso_starter_kaggle.ipynb  enso_starter_local.ipynb  enso_starter_notebook.ipynb
notebooks/validation_checks/: 01_leakage_audit.ipynb
outputs/metrics/: regression_results.json  results.json
scripts/: build_dataset.py  export_kaggle_dataset.py  run_training.py  train_models.py
src/: cli.py
src/evaluation/: metrics.py  plots.py  shap_explainer.py
src/export/: kaggle_exporter.py
src/feature_engineering/: builder.py
src/ingestion/: mjo.py  nino_indices.py  registry.py  soi.py  zonal_wind.py
src/labeling/: enso_phase.py
src/modeling/: baselines.py  trainer.py
src/preprocessing/: cleaner.py
src/utils/: config.py  io.py  logging.py
src/validation/: leakage_check.py  splits.py
tests/: test_features.py  test_labeling.py  test_leakage.py  test_splits.py
