[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enso-forecast"
version = "0.1.0"
description = "Dataset construction and benchmarking pipeline for early ENSO phase prediction"
requires-python = ">=3.10"
dependencies = [
    # Data
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",       # Parquet I/O
    # Modeling
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "joblib>=1.3",
    "shap>=0.45",
    # Config & CLI
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    # Networking
    "requests>=2.31",
    # Plotting
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "jupyterlab>=4.1",
]

# Registers the `enso` CLI command after `pip install -e .`
[project.scripts]
enso = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
